[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cerebrus-pulse-mcp"
version = "0.4.1"
description = "MCP server for Cerebrus Pulse — real-time crypto intelligence API for Hyperliquid perpetuals"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "0xsl1m", email = "sl1m@ghost.love" },
]
keywords = [
    "mcp", "crypto", "technical-analysis", "hyperliquid", "x402",
    "ai-agent", "cerebrus-pulse", "trading", "micropayments",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://cerebruspulse.xyz"
Documentation = "https://cerebruspulse.xyz/overview"
Repository = "https://github.com/0xsl1m/cerebrus-pulse-mcp"
Issues = "https://github.com/0xsl1m/cerebrus-pulse-mcp/issues"

[project.scripts]
cerebrus-pulse-mcp = "cerebrus_pulse_mcp.server:main"
